# jupyter-ai-acp-client

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
jupyter_ai_acp_client/: base_acp_persona.py  default_acp_client.py  extension_app.py  permission_manager.py  routes.py  terminal_manager.py  tool_call_manager.py  tool_call_renderer.py
jupyter_ai_acp_client/acp_personas/: claude.py  codex.py  copilot.py  gemini.py  goose.py  kiro.py  mistral_vibe.py
jupyter_ai_acp_client/tests/: test_base_acp_persona.py  test_codex.py  test_default_acp_client.py  test_goose.py  test_routes.py  test_terminal_manager.py  test_tool_call_manager.py  test_tool_call_renderer.py
src/: diff-view.tsx  index.ts  jupyter-chat-augment.d.ts  request.ts  stop-button.tsx  tool-calls.tsx
style/: base.css
